# duckdb-workflow-trigger

./: .env.example  Makefile  README.md  compose.yml  endpoints.yml  pyproject.toml  trigger.sh
.github/workflows/: Workflow-Trigger.yml  ci.yml  dispatch.yml
dispatch/: action.yml
src/release_dispatcher/: __init__.py  cli.py  config.py  github.py  models.py  state.py
tests/: test_cli.py  test_config.py  test_dispatch_action.py  test_endpoint_config_file.py  test_github.py  test_models.py  test_state.py
